# kairos

backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: ai_profiles.py  calendar.py  (+4 more)
backend/app/core/: config.py  dependencies.py  errors.py  firebase.py  logging.py  security.py
backend/app/prompts/: coach.md  mission_analysis.md  planner.md  priority_engine.md  recovery_planner.md  reflection_engine.md  risk_analyzer.md  scheduler.md  weekly_insights.md
backend/app/repositories/: ai_event_repository.py  ai_profile_repository.py  base.py  daily_plan_repository.py  milestone_repository.py  mission_repository.py  reflection_repository.py  task_repository.py  user_repository.py
backend/app/schemas/: ai_event.py  ai_outputs.py  ai_profile.py  calendar.py  coach.py  common.py  confidence.py  daily_plan.py  dashboard.py  health.py  milestone.py  mission.py  mission_plan.py  recovery.py  reflection.py  task.py  user.py  weekly_insights.py
backend/app/services/: adaptive_planning_service.py  ai_profile_service.py  calendar_service.py  coach_service.py  confidence_service.py  dashboard_service.py  gemini_service.py  mission_ai_service.py  mission_context.py  mission_context_loader.py  mission_service.py  prompt_loader.py  recovery_service.py  reflection_service.py  user_service.py  weekly_insights_service.py
backend/tests/: test_ai_modules.py  test_auth.py  test_confidence_service.py  test_firestore_encoding.py  test_health.py  test_mission_ai_service.py  test_mission_orchestrator.py  test_missions.py  test_prompt_loader.py
(+77 files in other folders)
